Fix issue where an ever expanding token emission form breaks the background image

--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,12 @@
 
 html {
   height: 100%;
+  width: 100%;
+  display: table;
 }
 
 body {
-  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Roboto", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -14,8 +16,9 @@ body {
   background: url(https://steem.com/wp-content/themes/steemit/dist/images/steemit_landing.png);
   background-size: cover;
   height: 100%;
-  position: relative;
   z-index: 0;
+  display: inline-block;
+  min-width: 100%;
 }
 
 label {
@@ -41,14 +44,9 @@ h4.heading {
   font-size: 1.3rem;
 }
 
-#content {
-	max-width: 1024px;
-	padding: 2em 0;
-  margin: 0 auto;
-  position: relative;
-  min-height: 100%;
+#header {
+  margin-top: 1.5rem;
 }
-
 #brand {
   height: 40px;
 }
@@ -90,6 +88,8 @@ h4.heading {
   background-size: contain;
   background-repeat: repeat-x;
   box-shadow: 0 0 15px 1px rgba(33, 37, 41, 0.4);
+  width: 100%;
+  position: relative;
 }
 
 /* Destination Unit Table */
@@ -197,7 +197,3 @@ h4.heading {
   display: none;
 }
 
-#smt_form div.form-page {
-  width: 100%;
-  position: absolute;
-}
